style: fix chapter spacing

--- a/manga/static/css/queries.css
+++ b/manga/static/css/queries.css
@@ -239,7 +239,6 @@
 
     .chapter {
         width: 100%;
-        margin-bottom: 6.4rem;
     }
 
     .chapter-container h2{
