--- a/manga/static/css/show_manga.css
+++ b/manga/static/css/show_manga.css
@@ -85,7 +85,7 @@
 .chapter {
     border: 1px solid black;
     padding: 1.2rem;
-    margin-top: 1.2rem;
+    margin-top: 1.8rem;
 }
 
 .chapter-number {
